<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyComm</string>
    <string name="settings">Settings</string>
    <string name="action_config">Settings</string>
    <string name="action_history">History</string>
    <string name="button_delete">◀</string>
    <string name="button_delete_all">Clear All</string>
    
    <string name="action_add">Add</string>
    <string name="action_add_vocab">Vocab</string>
    <string name="action_add_folder">Folder</string>
    <string name="action_add_link">Link</string>
    
    <string name="action_edit">Modify</string>
    <string name="action_remove">Remove</string>
    <string name="action_save">Save</string>
    <string name="dialog_confirm_message">Layout has been modified, save changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_vocab_add">Add New Vocab</string>
    <string name="dialog_vocab_modify">Modify Vocab</string>
    <string name="display_text">Display Text:</string>
    <string name="speech_text">Speech Text:</string>
    <string name="image_text">Image:</string>
    <string name="link_text">Link to folder:</string>
    <string name="vocab_image">Image:</string>
    <string name="button_home">Home</string>
	<string name="button_back">Back</string>
	<string name="button_open">Open</string>
	<string name="path_separator">▶</string>
	
	<string name="speak_checkbox">Speak?</string>
	<string name="select">Select</string>
	
	<string name="action_clear">Clear</string>
	<string name="never">never</string>
	<string name="sevenDays">7 days</string>
	<string name="forever">forever</string>
	<string name="history_option">History Option</string>
	<string name="header_date">Date</string>
	<string name="header_display">Speach Text</string>
	
	
</resources>