<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always|withText"
        android:title="@string/action_new" />
    
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always|withText"
        android:title="@string/action_add" >
        <menu>
            <item android:id="@+id/action_add_vocab"
                  android:title="@string/action_add_vocab"/>
            <item android:id="@+id/action_add_folder" 
                  android:title="@string/action_add_folder"/>
            <item android:id="@+id/action_add_link" 
                  android:title="@string/action_add_link"/>
        </menu>
     </item>
     
    <item
        android:id="@+id/action_open"
        android:showAsAction="always|withText"
        android:title="@string/action_open" />

    <item
        android:id="@+id/action_modify"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="always|withText"
        android:title="@string/action_edit" />
    
    <item
        android:id="@+id/action_remove"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="always|withText"
        android:title="@string/action_remove" />
    
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:showAsAction="always|withText"
        android:title="@string/action_save" />
    
</menu>