<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
  
     
     
    <item android:title="@string/history_option"
    	  android:id="@+id/history_option"
    	  android:showAsAction="always|withText"  >
            
        <menu>
            <group android:checkableBehavior="single">
		        <item android:id="@+id/never"
		              android:title="@string/never"
		              android:checkable="true"       	              
		              android:checked="true" />
		        <item android:id="@+id/sevenDays"
		              android:title="@string/sevenDays"
		              android:checkable="true" 
		              android:checked="false" />
		        <item android:id="@+id/forever"
		              android:title="@string/forever"
		              android:checkable="true" 
		              android:checked="false" />
		    </group>
            
        </menu>
	    
    </item>
    
    
   <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="always|withText"
        android:title="@string/action_clear" />

</menu>
